--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <img src="images/poster1.jpeg" alt="Movie 1">
         <img src="images/poster2.jpeg" alt="Movie 2">
         <img src="images/poster3.jpeg" alt="Movie 3">
+        <img src="images/poster4.jpeg" alt="Movie 4">
+        <img src="images/poster5.jpeg" alt="Movie 5">
+        <img src="images/poster6.jpeg" alt="Movie 6">
+        <img src="images/poster7.jpeg" alt="Movie 7">
       </div>
     </section>
 
